--- a/index.html
+++ b/index.html
@@ -105,19 +105,17 @@
     </div>
   </section>
   <section class="body">
-    <div class="firstHeader row">
-      <div class="homeLogoContainingDiv">
-        <img class="homeLogo" src="img/svLogoTitle.png" alt="Hero Image"></img>
-        <!-- <h1 style="display: inline; text-align: center;">SimVascular</h1> -->
-      </div>
+    <div style="height: 75%">
+    <div class="firstHeader" style="height: 100%">
       <div class="introDescription">
+        <h1 style="text-align: center;">Simvascular</h1>
         <p class="paddingIntro">The only fully opensource software package providing a complete pipeline from medical image data segmentation to patient specific blood flow simulation and analysis.</p>
         <p class="paddingIntro">The <a target="_blank" href="https://gateway.simvascular.org/">SimVascular Supercomputing Gateway</a> provides access to High-Performance Computing (HPC) clusters for running simulations using SimVascular CFD solvers. Simulations benefit from the performance levels that only large-scale HPC systems can offer and typically run an order of magnitude faster than on most workstations.</p>
       </div>
     </div>
-
-  <div class="everyOtherSection">
-      <div class="newSectionHeader">
+  </div>
+  <div>
+      <div style="margin-top: 15px" class="newSectionHeader">
         <h1 id="features">Features</h1>
       </div>
       <div class="newSectionContent">
@@ -153,7 +151,7 @@
       </div>
   </div>
 
-    <div>
+    <div class="everyOtherSection">
       <div class="newSectionHeader">
         <h1 id="download">Download Simvascular</h1>
       </div>
@@ -234,7 +232,7 @@
       </div>
     </div>
 
-    <div class="everyOtherSection">
+    <div>
       <div class="newSectionHeader">
         <h1 id="documentation">Documentation</h1>
       </div>
@@ -288,7 +286,7 @@
       </div>    
     </div>
 
-    <div>
+    <div class="everyOtherSection">
       <div class="newSectionHeader">
         <h1 id="gallery">Gallery</h1>
       </div>
@@ -354,7 +352,7 @@
       </div>
     </div>
 
-    <div class="everyOtherSection">
+    <div>
       <div class="newSectionHeader">
         <h1 id="repository">The Vascular Model Repository</h1>
       </div>
@@ -396,7 +394,7 @@
     </div> -->
 
 
-    <div>
+    <div class="everyOtherSection">
       <div class="newSectionHeader">
         <h1 id="socials">Socials</h1>
       </div>
@@ -444,7 +442,7 @@
     </div>
 
 
-    <div class="everyOtherSection">
+    <div>
       <div class="newSectionHeader">
         <h1 id="workshops">Upcoming Workshops</h1>
       </div>
@@ -473,7 +471,7 @@
     </div> 
     </div>  
 
-  <div style="padding-bottom: 15px">
+  <div class="everyOtherSection" style="padding-bottom: 15px">
     <div class="newSectionHeader">
       <h1 id="team">Team</h1>
     </div>
@@ -567,7 +565,7 @@
     </div>
   </div>
 
-  <div class="everyOtherSection">
+  <div>
     <div class="newSectionHeader">
       <h1 id="institutions">Institutions</h1>
     </div>
@@ -592,7 +590,7 @@
     </div>
   </div>
 
-  <div> 
+  <div class="everyOtherSection"> 
     <div class="newSectionHeader">
       <h1 id="contact">Contact Us</h1>
       </div>
