initial navigation bar in documentation

--- a/documentation/htmlFiles/quickguide.html
+++ b/documentation/htmlFiles/quickguide.html
@@ -37,6 +37,78 @@
         <div class="headerLogoContainer">
           <img id="logo" class="headerLogoImage" src="/img/svLogoTitle.png" alt="SimVascular Logo"></img>
         </div>
+        <div class="headerNavBar">
+          <details>
+            <summary><i class="fa-solid fa-bars" id="iconForSkip"></i></summary>
+            <div class="navBarSection">
+              <details>
+                <summary class="navTitle">User Guides</summary>
+                <div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</a><br>
+                  </div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="/documentation/htmlFiles/quickguide.html">Getting Started</a><br>
+                  </div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="/documentation/htmlFiles/modeling.html">Modeling Guide</a><br>
+                  </div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="/documentation/htmlFiles/meshing.html">Meshing Guide</a><br>
+                  </div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="/documentation/htmlFiles/flowsolver.html">Simulation Guide</a><br>
+                  </div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="/documentation/htmlFiles/svfsi.html">svFSI Guide</a><br>
+                  </div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="/documentation/htmlFiles/simcardio.html">SimCardio Guide</a><br>
+                  </div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="/documentation/htmlFiles/rom_simulation.html">ROM Simulation Guide</a><br>
+                  </div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="/documentation/htmlFiles/genbc.html">General B.C. Guide</a><br>
+                  </div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="/documentation/htmlFiles/python_interface.html">Python Interface</a><br>
+                  </div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="/documentation/htmlFiles/references.html">References</a><br>
+                  </div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
+                  </div>
+                </div>
+              </details>
+              <details>
+                <summary class="navTitle">Clinical Cases</summary>
+                <div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="clinicalCase3.html">Coronary Normal</a>                  
+                  </div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="clinicalCase1.html">Aortofemoral Normal - 1</a>                  
+                  </div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="clinicalCase2.html">Aortofemoral Normal - 2</a>                  
+                  </div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="clinicalCase4.html">Healthy Pulmonary</a>                  
+                  </div>
+                </div>
+              </details>
+              <details>
+                <summary class="navTitle">Developer Guides</summary>
+                <div>
+                  <div class="navSubLink">
+                    <a target="_blank" href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_developers">Compile Source Code</a>                  
+                  </div>
+                </div>
+              </details>
+            </div>
+        </div>
       </div>
     </section>
   <section class="mainSection row">
