--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   </head>
   <body>
   <section class="header">
-  <div class="navigationSection" id="navigationSection">
-      <div class="colContainsIcon">
+  <div class="navBar" id="navBar">
+      <div>
         <i class="fa-solid fa-bars" id="iconForSkip"></i>
       </div>
       <nav id="navElement">
@@ -247,18 +247,18 @@
           <div class="docSection">
             <div class="col-md-6 col-12">
               <a class="docLinks" target="_blank" href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</a><br>
-              <a class="docLinks" target="_blank" href="docsQuickGuide.html">Getting Started</a><br>
-              <a class="docLinks" target="_blank" href="docsModelGuide.html">Modeling Guide</a><br>
-              <a class="docLinks" target="_blank" href="docsMeshing.html">Meshing Guide</a><br>
-              <a class="docLinks" target="_blank" href="docsFlowSolver.html">Simulation Guide</a><br>
-              <a class="docLinks" target="_blank" href="docssvFSI.html">svFSI Guide</a><br>
+              <a class="docLinks" target="_blank" href="/documentation/htmlFiles/quickguide.html">Getting Started</a><br>
+              <a class="docLinks" target="_blank" href="/documentation/htmlFiles/modeling.html">Modeling Guide</a><br>
+              <a class="docLinks" target="_blank" href="/documentation/htmlFiles/meshing.html">Meshing Guide</a><br>
+              <a class="docLinks" target="_blank" href="/documentation/htmlFiles/flowsolver.html">Simulation Guide</a><br>
+              <a class="docLinks" target="_blank" href="/documentation/htmlFiles/svfsi.html">svFSI Guide</a><br>
             </div>
             <div class="col-md-6 col-12">
-              <a class="docLinks" target="_blank" href="docsSimCardio.html">SimCardio Guide</a><br>
-              <a class="docLinks" target="_blank" href="docsROMSimulation.html">ROM Simulation Guide</a><br>
-              <a class="docLinks" target="_blank" href="docsGenBC.html">General B.C. Guide</a><br>
-              <a class="docLinks" target="_blank" href="docsPythonInterface.html">Python Interface</a><br>
-              <a class="docLinks" target="_blank" href="docsReferences.html">References</a><br>
+              <a class="docLinks" target="_blank" href="/documentation/htmlFiles/simcardio.html">SimCardio Guide</a><br>
+              <a class="docLinks" target="_blank" href="/documentation/htmlFiles/rom_simulation.html">ROM Simulation Guide</a><br>
+              <a class="docLinks" target="_blank" href="/documentation/htmlFiles/genbc.html">General B.C. Guide</a><br>
+              <a class="docLinks" target="_blank" href="/documentation/htmlFiles/python_interface.html">Python Interface</a><br>
+              <a class="docLinks" target="_blank" href="/documentation/htmlFiles/references.html">References</a><br>
               <a class="docLinks" target="_blank" href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
             </div>
           </div>
