--- a/documentation/htmlFiles/template.html
+++ b/documentation/htmlFiles/template.html
@@ -116,7 +116,7 @@
             </div>
         </div>
       </div>
-    </section>
+  </section>
   <!-- body of documentation; changes for each new page -->
   <section class="mainSection row">
     <!-- navigation section on left -->
@@ -141,15 +141,15 @@
      
     <!-- example -->
       <div> 
-        <h4 class="skipTo" id="skipTo_firstSection_intro">First Section of Documentation</h4>
+        <h4 class="skipTo _firstSection_intro">First Section of Documentation</h4>
         <div>
-            <p class="skipTo" id="skipTo_firstSection_first_sub">The first sub section</p>
-            <p class="skipTo" id="skipTo_firstSection_second_sub">The second sub section</p>
+          <p class="skipTo _firstSection_first_sub">The first sub section</p>
+          <p class="skipTo _firstSection_second_sub">The second sub section</p>
         </div>
-        <h4 class="skipTo" id="skipTo_secondSection_intro">Second Section of Documentation</h4>
+        <h4 class="skipTo _secondSection_intro">Second Section of Documentation</h4>
         <div>
-          <p class="skipTo" id="skipTo_secondSection_first_sub">The first sub section</p>
-          <p class="skipTo" id="skipTo_secondSection_second_sub">The second sub section</p>
+          <p class="skipTo _secondSection_first_sub">The first sub section</p>
+          <p class="skipTo _secondSection_second_sub">The second sub section</p>
         </div>
       </div>
       
