--- a/documentation/htmlFiles/quickguide.html
+++ b/documentation/htmlFiles/quickguide.html
@@ -47,40 +47,40 @@
                   <summary class="navTitle">User Guides</summary>
                   <div>
                     <div class="navSubLink">
-                      <a target="_blank" href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</a><br>
+                      <p href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</p>
                     </div>
                     <div class="navSubLink">
-                      <a target="_blank" href="/documentation/htmlFiles/quickguide.html">Getting Started</a><br>
+                      <p href="/documentation/htmlFiles/quickguide.html">Getting Started</p>
                     </div>
                     <div class="navSubLink">
-                      <a target="_blank" href="/documentation/htmlFiles/modeling.html">Modeling Guide</a><br>
+                      <p href="/documentation/htmlFiles/modeling.html">Modeling Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <a target="_blank" href="/documentation/htmlFiles/meshing.html">Meshing Guide</a><br>
+                      <p href="/documentation/htmlFiles/meshing.html">Meshing Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <a target="_blank" href="/documentation/htmlFiles/flowsolver.html">Simulation Guide</a><br>
+                      <p href="/documentation/htmlFiles/flowsolver.html">Simulation Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <a target="_blank" href="/documentation/htmlFiles/svfsi.html">svFSI Guide</a><br>
+                      <p href="/documentation/htmlFiles/svfsi.html">svFSI Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <a target="_blank" href="/documentation/htmlFiles/simcardio.html">SimCardio Guide</a><br>
+                      <p href="/documentation/htmlFiles/simcardio.html">SimCardio Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <a target="_blank" href="/documentation/htmlFiles/rom_simulation.html">ROM Simulation Guide</a><br>
+                      <p href="/documentation/htmlFiles/rom_simulation.html">ROM Simulation Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <a target="_blank" href="/documentation/htmlFiles/genbc.html">General B.C. Guide</a><br>
+                      <p href="/documentation/htmlFiles/genbc.html">General B.C. Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <a target="_blank" href="/documentation/htmlFiles/python_interface.html">Python Interface</a><br>
+                      <p href="/documentation/htmlFiles/python_interface.html">Python Interface</p> 
                     </div>
                     <div class="navSubLink">
-                      <a target="_blank" href="/documentation/htmlFiles/references.html">References</a><br>
+                      <p href="/documentation/htmlFiles/references.html">References</p> 
                     </div>
                     <div class="navSubLink">
-                      <a target="_blank" href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
+                      <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
                     </div>
                   </div>
                 </details>
@@ -88,16 +88,16 @@
                   <summary class="navTitle">Clinical Cases</summary>
                   <div>
                     <div class="navSubLink">
-                      <a target="_blank" href="clinicalCase3.html">Coronary Normal</a>                  
+                      <p href="clinicalCase3.html">Coronary Normal</a>                  
                     </div>
                     <div class="navSubLink">
-                      <a target="_blank" href="clinicalCase1.html">Aortofemoral Normal - 1</a>                  
+                      <p href="clinicalCase1.html">Aortofemoral Normal - 1</a>                  
                     </div>
                     <div class="navSubLink">
-                      <a target="_blank" href="clinicalCase2.html">Aortofemoral Normal - 2</a>                  
+                      <p href="clinicalCase2.html">Aortofemoral Normal - 2</a>                  
                     </div>
                     <div class="navSubLink">
-                      <a target="_blank" href="">Healthy Pulmonary</a>                  
+                      <p href="">Healthy Pulmonary</a>                  
                     </div>
                   </div>
                 </details>
@@ -105,7 +105,7 @@
                   <summary class="navTitle">Developer Guides</summary>
                   <div>
                     <div class="navSubLink">
-                      <a target="_blank" href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_developers">Compile Source Code</a>                  
+                      <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_developers">Compile Source Code</a>                  
                     </div>
                   </div>
                 </details>
