--- a/documentation/htmlFiles/quickguide.html
+++ b/documentation/htmlFiles/quickguide.html
@@ -114,8 +114,8 @@
         </div>
     </section>
 
-  <section class="mainSection row">
-    <section class="col-md-4 col-xl-3 navigationSection" style="float: left">
+  <section class="mainSection">
+    <section class="navigationSection" style="float: left">
       <div>
         <h4 class="skipTo introduction">Introduction</h4>
         <div>
@@ -153,7 +153,7 @@
       </div>
     </section>
 
-    <section class="col-md-8 col-xl-9 docsSection" style="float: right"> 
+    <section class="docsSection" style="float: right">
       <span id="getting_started">
         <zero-md src="/documentation/quickguide/_getting_started.md"></zero-md>
       </span>
