--- a/documentation/htmlFiles/quickguide.html
+++ b/documentation/htmlFiles/quickguide.html
@@ -16,16 +16,29 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+  
   <script>
     window.ZeroMdConfig = {
       cssUrls: ['/css/bootstrap.css',"/css/grayscale.css","/css/standards.css","/css/shop-item.css","/css/documentation.css"]
     }
   </script>
 
-  <script
-    type="module"
-    src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"
-  ></script>
+<script>
+  MathJax = {
+    tex: {
+      inlineMath: [
+        ['$', '$'],
+        ['$$', '$$'],
+        ['\\(', '\\)'],
+      ],
+    },
+  };
+</script>
+<script
+  async
+  src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"
+></script>
+
 
     <!-- browser tab labels -->
     <link rel="shortcut icon" type="image/jpg" href="/img/svIcon.png"></link>
@@ -154,6 +167,14 @@
     </section>
 
     <section class="docsSection" style="float: right">
+      <p>
+      $$
+      p(t)=p\_0 + \frac{1}{T}\,\int\_{t-T}^{t} Z(t−\tau) \, Q(\tau) \, d\tau
+      $$</p>
+      <span id="hehechecking">
+        <zero-md id="md" src="/documentation/flowsolver/_bcPhysics.md" no-shadow>
+        </zero-md>
+      </span>
       <span id="getting_started">
         <zero-md src="/documentation/quickguide/_getting_started.md"></zero-md>
       </span>
@@ -232,6 +253,15 @@
     <p id="skipToTop"><i class="fa-solid fa-arrow-up"></i></p>
   </section>
 
+
+  <script>
+    md.addEventListener('zero-md-rendered', () => {
+      var el = document.createElement('script');
+      el.src = 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js';
+      document.head.appendChild(el);
+    });
+  </script>
+
   <!-- Style CSS -->
   <link rel="stylesheet" href="/css/bootstrap.css">
   <link rel="stylesheet" href="/css/grayscale.css">
@@ -248,6 +278,8 @@
 
   <!-- <script src="js/jquery-2.1.1.js"></script> -->
   <script src="/js/jquery.mixitup.min.js"></script>
+
+  
 
   <script src="/js/documentation.js"></script>
 
