--- a/documentation/htmlFiles/quickguide.html
+++ b/documentation/htmlFiles/quickguide.html
@@ -15,28 +15,17 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-<script>
-  MathJax = {
-    tex: {
-      inlineMath: [
-        ['$', '$'],
-        ['$$', '$$'],
-        ['\\(', '\\)'],
-      ],
-    },
-  };
-</script>
-<script
-  async
-  src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"
-></script>
-
-<script>
-  window.ZeroMdConfig = {
-    cssUrls: ['/css/bootstrap.css',"/css/grayscale.css","/css/standards.css","/css/shop-item.css","/css/documentation.css"]
-  }
-</script>
+  
+  <script>
+    window.ZeroMdConfig = {
+      cssUrls: ['/css/bootstrap.css',"/css/grayscale.css","/css/standards.css","/css/shop-item.css","/css/documentation.css"]
+    }
+  </script>
+  
+  <script
+    type="module"
+    src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"
+  ></script>
 
     <!-- browser tab labels -->
     <link rel="shortcut icon" type="image/jpg" href="/img/svIcon.png"></link>
@@ -259,8 +248,6 @@
 
   <!-- <script src="js/jquery-2.1.1.js"></script> -->
   <script src="/js/jquery.mixitup.min.js"></script>
-
-  
 
   <script src="/js/documentation.js"></script>
 
